// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for EagleeyeSegmentActions's triggerBehavioralAction destination action: all fields 1`] = `
Object {
  "body": Object {
    "identityValue": "hsNw(#(*It$j9]TbPFxH",
    "triggers": Array [
      Object {
        "reference": "hsNw(#(*It$j9]TbPFxH",
      },
    ],
    "walletTransaction": Object {
      "reference": "hsNw(#(*It$j9]TbPFxH",
    },
  },
  "type": "services/trigger",
}
`;

exports[`Testing snapshot for EagleeyeSegmentActions's triggerBehavioralAction destination action: required fields 1`] = `
Object {
  "body": Object {
    "identityValue": "hsNw(#(*It$j9]TbPFxH",
    "triggers": Array [
      Object {
        "reference": "hsNw(#(*It$j9]TbPFxH",
      },
    ],
  },
  "type": "services/trigger",
}
`;
